revise zeta.html

--- a/zeta.html
+++ b/zeta.html
@@ -78,7 +78,7 @@
         
         <div class="slider-container">
             <div class="input-container">
-                <label for="imz-slider">虚部值 (t):</label>
+                <label for="imz-slider">虚部值：</label>
                 <input type="range" id="imz-slider" min="-50" max="50" step="0.01" value="0">
                 <input type="number" id="imz-input" min="-50" max="50" step="0.01" value="0">
             </div>
@@ -93,10 +93,9 @@
         </div>
         
         <div class="info">
-            <h3>关于黎曼ζ函数:</h3>
-            <p>ζ函数在复平面上的定义为: ζ(s) = ∑<sub>n=1</sub><sup>∞</sup> 1/n<sup>s</sup>，其中 s = σ + it</p>
-            <p>黎曼猜想认为所有非平凡零点都位于临界线 σ = 1/2 上。</p>
-            <p>本可视化展示了当实部 σ = 0.5 时，ζ函数值随虚部 t 变化的情况。</p>
+            <h3>说明:</h3>
+            <p>本可视化展示了当实部 σ = 0.5 时，ζ函数值随虚部变化的情况。</p>
+            <p>如上左图虚线标示出了区域内的非平凡零点虚部位置</p>
         </div>
     </div>
 
